--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" /> 
+    
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
+
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -42,6 +47,11 @@
       </nav>
     </header>
     <main></main>
+
+    <svg xmlns="http://www.w3.org/2000/svg" width="29" height="28" class="floppy-icon">
+      <use href="./svg/floppy.svg#floppy-icon"></use>
+    </svg>
+
     <script src="./scripts/like.js"></script>
   </body>
 </html>
