--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul class="card-section__card-list">
           
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-1">
               <h2 class="card__title">
                 Фритрек и нулевой спринт: Подготовка к работе
@@ -110,7 +110,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-2">
               <h2 class="card__title">
                 1 спринт: Я — чистый лист
@@ -154,7 +154,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-3">
               <h2 class="card__title">
                 1 спринт: А если не получится?
@@ -198,7 +198,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-4">
               <h2 class="card__title">
                 2 спринт: Погоня за идеалом
@@ -242,7 +242,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-5">
               <h2 class="card__title">
                 2 спринт: О тех, кто рядом
@@ -286,7 +286,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-6">
               <h2 class="card__title">
                 3 спринт: Обходные стратегии
@@ -330,7 +330,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-7">
               <h2 class="card__title">
                 3 спринт: Когда опускаются руки
@@ -374,7 +374,7 @@
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
-          <li clas="card-list__item">
+          <li class="card-list__item">
             <article class="card card-8">
               <h2 class="card__title">
                 «Сейчас я здесь»
