--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <header class="header content-section__inline-size">
       <!-- :::::::::: HEADER :::::::::: -->
       <div class="header-logo-group">
-        <a href="#0" class="logo-link">
-          <div class="logo-text">&lt;/HTML&gt;</div>
-        </a>
+        <a href="#0" class="logo-link"> &lt;/HTML&gt; </a>
         <h1 class="header-title">Закрывающий тег</h1>
       </div>
       <nav class="theme-menu header__theme-menu">
@@ -69,22 +67,26 @@
                 Фритрек и нулевой спринт: Подготовка к работе
               </h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image"
+                />
                 <p class="watermark">&lt;/HTML&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     Это было самое начало пути. На этом этапе важно было
                     проникнуться основами и настроиться на учёбу. И, возможно,
                     подумать, как новые знания могут повлиять на ваше будущее.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний о начале обучения.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -116,7 +118,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -130,12 +132,16 @@
             <article class="card card-2">
               <h2 class="card__title">1 спринт: Я — чистый лист</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__grayscale"
+                />
                 <p class="watermark">&lt;/HTML&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     На первых этапах мы работали со страхами и сомнениями,
                     которые часто испытывают новички. Один из них — страх перед
                     чистым листом. Это, конечно же, намного сложнее, чем боязнь
@@ -143,12 +149,12 @@
                     глубокие вопросы: с чего начать? а вдруг будет слишком
                     сложно? что, если я не справлюсь?
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний о начале первого спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -180,7 +186,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -194,23 +200,27 @@
             <article class="card card-3">
               <h2 class="card__title">1 спринт: А если не получится?</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__saturate"
+                />
                 <p class="watermark">&lt;CSS&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     Первый проект — позади! Но это всё ещё самое начало пути.
                     Радость могла быстро померкнуть и смениться ожиданием
                     провала. Или вы, наоборот, могли вдохновиться успехами и
                     поверить в себя.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний об окончании первого спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -242,7 +252,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -256,24 +266,28 @@
             <article class="card card-4">
               <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__saturate_contrast_sepia"
+                />
                 <p class="watermark">&lt;desigions&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     На этом этапе вы уже достаточно разбирались в основах
                     вёрстки, чтобы понять, как много ещё впереди. Вы могли
                     попытаться погнаться за идеалом и понять, что он недостижим.
                     А, может, вы вовсе и не подвержены перфекционизму и вместо
                     того, чтобы сделать идеально, старались просто сделать.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний о начале второго спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -305,7 +319,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -319,12 +333,16 @@
             <article class="card card-5">
               <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__invert"
+                />
                 <p class="watermark">care</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     Всё это время вы были не одиноки (хотя, возможно, иногда и
                     чувствовали, что одни против целого мира). Вас окружали
                     одногруппники, команда сопровождения и просто близкие люди,
@@ -332,12 +350,12 @@
                     не поддавался. Осваивать что-то новое легче, когда рядом
                     есть единомышленники, не правда ли?
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний об окончании второго спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -369,7 +387,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -383,22 +401,26 @@
             <article class="card card-6">
               <h2 class="card__title">3 спринт: Обходные стратегии</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__saturate_sepia"
+                />
                 <p class="watermark">&lt;support&gt;</p>
               </div>
-              <div class="card__content">
+              <div class="card__text__paragraph">
                 <div class="card__text">
                   <p class="card-info">
                     На этом курсе вы постоянно решали разные задачи. В какой-то
                     момент вам могло показаться, что решения просто иссякли.
                     Значит, пришло время посмотреть на задачу под другим углом.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний о начале третьего спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -430,7 +452,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -444,24 +466,28 @@
             <article class="card card-7">
               <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__blur"
+                />
                 <p class="watermark">&lt;lifes-style: none;&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     Во время учёбы часто возникает чувство, когда не знаешь, за
                     что хвататься. Вроде и проектную пора сдавать, и задачи
                     хочется порешать, и в теории получше разобраться, и жизнь не
                     забыть пожить. В такие моменты очень нужна концентрация.
                     Вспомните, откуда вы её черпали.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место для ваших воспоминаний об окончании третьего спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -493,7 +519,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
+                  <button type="button" class="button card__like-button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -507,12 +533,16 @@
             <article class="card card-8">
               <h2 class="card__title">«Сейчас я здесь»</h2>
               <div class="image-container">
-                <img src="./images/bus.png" alt="" class="card__image" />
+                <img
+                  src="./images/bus.png"
+                  alt="торговый грузовичок с боковым окном-прилавком взездной ночью стоит в лесном кемпинге"
+                  class="card__image filter__hue-rotate_sepia_blur"
+                />
                 <p class="watermark">&lt;experience&gt;</p>
               </div>
               <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     Сейчас вы уже очень много знаете о вёрстке. Но это только
                     начало. Во-первых, впереди ещё много материала про
                     «красотищу». Во-вторых, с окончанием курса учёба не
@@ -521,13 +551,13 @@
                     случай, когда важен сам процесс познания. Ведь часто путь —
                     и есть результат.
                   </p>
-                  <p class="card-feedback">
+                  <p class="card__text__paragraph">
                     Место, чтобы остановиться, подумать и написать, что вы
                     чувствуете в этой точке пути.
                   </p>
                 </div>
                 <div class="card__buttons">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -559,8 +589,10 @@
                       />
                     </svg>
                   </button>
-                  <button class="card__like-button">
-                    <span class="button__text">Like</span>
+                  <button type="button" class="button card__like-button">
+                    <span class="button__text card__like-button__text"
+                      >Like</span
+                    >
                   </button>
                 </div>
               </div>
@@ -571,7 +603,7 @@
       </section>
 
       <button
-        class="openDialogBtn save-button"
+        class="openDialogBtn button save-button"
         type="button"
         onclick="window['myDialog'].showModal();"
         aria-controls="myDialog"
@@ -585,7 +617,7 @@
         >
           <use href="./svg/floppy.svg#floppy-icon"></use>
         </svg>
-        <span class="save-button__text">Сохранить на память</span>
+        <span class="button__text save-button__text">Сохранить на память</span>
       </button>
 
       <dialog class="dialog" id="myDialog">
@@ -601,13 +633,13 @@
           </svg>
           <h2 class="save__header">Вставьте дискету, чтобы продолжить</h2>
         </div>
-        <div class="dialog__button">
+        <div class="">
           <button
-            class="dialog-button"
+            class="button dialog-button"
             type="button"
             onclick="window['myDialog'].close()"
           >
-            <span class="dialog-button__text"> Ок </span>
+            <span class="button__text dialog-button__text"> Ок </span>
           </button>
         </div>
       </dialog>
