--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <div class="card__content">
                 <div class="card__text">
                   <p class="card__text__paragraph">
-                    На первых этапах мы работали со страхами и сомнениями,
+                    На первых этапах мы работали со&nbsp;страхами и сомнениями,
                     которые часто испытывают новички. Один из них — страх перед
                     чистым листом. Это, конечно же, намного сложнее, чем боязнь
                     куска бумаги. Часто за этим ощущением скрываются более
@@ -408,15 +408,15 @@
                 />
                 <p class="watermark">&lt;support&gt;</p>
               </div>
-              <div class="card__text__paragraph">
+              <div class="card__content">
                 <div class="card__text">
-                  <p class="card-info">
+                  <p class="card__text__paragraph">
                     На этом курсе вы постоянно решали разные задачи. В какой-то
                     момент вам могло показаться, что решения просто иссякли.
                     Значит, пришло время посмотреть на задачу под другим углом.
                   </p>
                   <p class="card__text__paragraph">
-                    Место для ваших воспоминаний о начале третьего спринта.
+                    Место для ваших воспоминаний об окончании второго спринта.
                   </p>
                 </div>
                 <div class="card__buttons">
@@ -590,9 +590,7 @@
                     </svg>
                   </button>
                   <button type="button" class="button card__like-button">
-                    <span class="button__text card__like-button__text"
-                      >Like</span
-                    >
+                    <span class="button__text">Like</span>
                   </button>
                 </div>
               </div>
