--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul class="card-section__card-list">
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-1">
+            <article class="card">
               <h2 class="card__title">
                 Фритрек и нулевой спринт: Подготовка к работе
               </h2>
@@ -129,7 +129,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-2">
+            <article class="card">
               <h2 class="card__title">1 спринт: Я — чистый лист</h2>
               <div class="image-container">
                 <img
@@ -197,7 +197,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-3">
+            <article class="card">
               <h2 class="card__title">1 спринт: А если не получится?</h2>
               <div class="image-container">
                 <img
@@ -263,7 +263,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-4">
+            <article class="card">
               <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
               <div class="image-container">
                 <img
@@ -330,7 +330,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-5">
+            <article class="card">
               <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
               <div class="image-container">
                 <img
@@ -398,7 +398,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-6">
+            <article class="card">
               <h2 class="card__title">3 спринт: Обходные стратегии</h2>
               <div class="image-container">
                 <img
@@ -463,7 +463,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-7">
+            <article class="card">
               <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
               <div class="image-container">
                 <img
@@ -530,7 +530,7 @@
 
           <!-- :::::::::::::::::::::::::::::::::::::::::::::: -->
           <li class="card-list__item">
-            <article class="card card-8">
+            <article class="card">
               <h2 class="card__title">«Сейчас я здесь»</h2>
               <div class="image-container">
                 <img
